Re-built and published because for some arcane reason previous version didn't work?