@@ -125,7 +125,7 @@ dependencies {
     runtimeOnly fg.deobf("curse.maven:spark-361579:${deps.spark}")
 
     //implementation fg.deobf("org.violetmoon.zeta:Zeta:1.0-24f")
-    implementation fg.deobf("curse.maven:zeta-968868:5594814")
+    implementation fg.deobf("curse.maven:zeta-968868:5597406")
     implementation fg.deobf("com.github.glitchfiend:TerraBlender-forge:${deps.terrablender}")
     implementation fg.deobf("curse.maven:jei-238222:${deps.jei}")
     implementation fg.deobf("curse.maven:flan-forge-493246:${deps.flan}")
